--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -1,16 +1,31 @@
 .container {
+	color : #545454;
 	width : 100%;
 	background : #fff;
 	height : 100px;
+	border-bottom : 1px solid #f5f5f5;
 	.innerBox {
+		overflow : hidden;
 		margin : auto;
 		width : 80%;
 		border-bottom : 1px solid #f5f5f5;
 		.logo {
-			color : #545454;
+			width : auto;
+			float : left;
 			line-height : 50px;
 			font-size : 18px;
 			font-weight : 400;
+		}
+		.navbar {
+			font-size : 14px;
+			font-weight : 100;
+			width : auto;
+			float : right;
+			line-height : 50px;
+			.navList li {
+				cursor : pointer;
+				padding-left : 16px;
+			}
 		}
 	}
 	.subtitle {
