--- a/components/ButtonRound/buttonRound.css
+++ b/components/ButtonRound/buttonRound.css
@@ -1,5 +1,7 @@
 .outer {
 	font-size : 14px;
+	cursor : pointer;
+	text-align : center;
 	border : 1px solid #ff8e2d;
 	border-radius : 24px;
 	height : 24px;
