--- a/components/LoginContainer/loginContainer.css
+++ b/components/LoginContainer/loginContainer.css
@@ -1,27 +1,29 @@
-.outer {
-	position : absolute;
-	background : #fff;
-	border : 1px solid #f5f5f5;
-	border-radius : 2px;
-	padding : 8px 16px 16px 16px;
-	right : 40%;
-	top : 150px;
-	width : 200px;
-	box-shadow : 1px 1px 1px #efefef;
-	.title {
-		font-size : 14px;
-		text-align : center;
-		font-weight : 400;
-		line-height : 36px;	
-		border-bottom : 1px solid #efefef;
-		margin-bottom : 8px;
-	}
-	.close {
-		font-size : 14px;
-		text-align : center;
-		margin-top : 20px;
-		padding-top : 12px;
-		cursor : pointer;
-		border-top : 1px solid #efefef;
+.container {
+	width : 100%;
+	height : 100%;
+	position : fixed;
+	background : rgba(0, 0, 0, 0.7);
+	.outer {
+		position : absolute;
+		background : #fff;
+		border : 1px solid #f5f5f5;
+		border-radius : 8px;
+		padding : 8px 16px 16px 16px;
+		right : 40%;
+		top : 150px;
+		width : 200px;
+		.title {
+			font-size : 14px;
+			text-align : center;
+			font-weight : 400;
+			line-height : 36px;	
+			border-bottom : 1px solid #efefef;
+			margin-bottom : 8px;
+		}
+		.close {
+			max-width : 72px;
+			margin : 16px auto 0 auto;
+		}
 	}
 }
+
