added username in header

--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -25,6 +25,10 @@
 			.navList li {
 				cursor : pointer;
 				padding-left : 16px;
+			
+			}
+			.userName {
+				font-weight : 400;
 			}
 		}
 	}
