added profile photo to header

--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -30,6 +30,12 @@
 			.userName {
 				font-weight : 400;
 			}
+			.profilePhoto {
+				border-radius : 50%;
+				max-width : 16px;
+				margin-bottom : -3px;
+				margin-right : 4px;	
+			}
 		}
 	}
 	.subtitle {
