--- a/public/base.css
+++ b/public/base.css
@@ -28,3 +28,20 @@ a {
 	height : 0;
 	width : 0;
 }
+
+.clearfix:after {
+    content:" ";
+    display:table;
+    clear:both;
+
+}
+
+.overlay {
+	background-color:transparent;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    display:block;
+}
