--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -5,7 +5,6 @@
 	height : 100px;
 	border-bottom : 1px solid #f5f5f5;
 	.innerBox {
-		overflow : hidden;
 		margin : auto;
 		width : 80%;
 		border-bottom : 1px solid #f5f5f5;
@@ -28,6 +27,7 @@
 			
 			}
 			.userName {
+				position : relative;
 				font-weight : 400;
 			}
 			.profilePhoto {
