added overlay class

--- a/public/base.css
+++ b/public/base.css
@@ -45,3 +45,13 @@ a {
     bottom:0;
     display:block;
 }
+
+.overlay-black {
+	background-color:rgba(0, 0, 0, 0.3);
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    display:block;
+}
