--- a/components/HeaderMinimal/headerMinimal.css
+++ b/components/HeaderMinimal/headerMinimal.css
@@ -7,6 +7,11 @@
 	.logo {	
 	    float : left;
 	}
+	.icon {
+		margin-right: 8px;
+		width: 32px;
+		margin-bottom: -9px;
+	}
 	.link {
 		font-weight : 100;
 		font-size : 14px;
