--- a/components/LandingPage/landingPage.css
+++ b/components/LandingPage/landingPage.css
@@ -1,12 +1,20 @@
 .outer {
 	background : #fff;
 	height : 100%;
+	min-height : 600px;
+	.img-container {
+		text-align : center;
+		margin-top : 24px;
+		.image {
+			max-width : 160px;
+		}
+	}
 	.title {
 		text-align : center;
 		font-size : 42px;
 		max-width : 75%;
 		margin : auto;
-		margin-top : 72px;
+		margin-top : 32px;
 		font-weight : 100;
 	}
 	.subtitle {
