--- a/components/ButtonRound/buttonRound.css
+++ b/components/ButtonRound/buttonRound.css
@@ -1,11 +1,11 @@
 .outer {
-	font-size : 14px;
 	cursor : pointer;
-	text-align : center;
-	border : 1px solid #ff8e2d;
-	border-radius : 24px;
-	height : 24px;
-	line-height : 24px;
-	color : #ff8e2d;
-	padding : 1px 12px;
+	background: #ff6e21;
+	text-align: center;
+	padding: 10px 4px;
+	color: #fff;
+	margin: auto;
+	border-radius : 28px;
+	line-height : 16px;
 }
+
