--- a/components/HeaderMinimal/headerMinimal.css
+++ b/components/HeaderMinimal/headerMinimal.css
@@ -3,7 +3,6 @@
     width: 80%;
     margin: auto;
     line-height: 72px;
-    overflow: hidden;
 	.logo {	
 	    float : left;
 	}
@@ -17,4 +16,27 @@
 		font-size : 14px;
 		float : right;
 	}
+	.navbar {
+		font-size : 14px;
+		font-weight : 100;
+		width : auto;
+		float : right;
+		line-height : 50px;
+		.navList li {
+			cursor : pointer;
+			padding-left : 16px;
+		
+		}
+		.userName {
+			position : relative;
+			font-weight : 400;
+		}
+		.profilePhoto {
+			border-radius : 50%;
+			max-width : 16px;
+			margin-bottom : -3px;
+			margin-right : 4px;	
+		}
+	}
+
 }
