--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -3,6 +3,15 @@
 	margin : 32px auto;
 	padding : 16px;
 	border : 4px solid;
+	 .error {
+		font-weight : 100;
+		font-size : 14px;
+		color : red;
+		background : #efefef;
+		border-radius : 4px;
+		padding : 8px;
+		margin : 32px 0;
+	 }
 	.title {
 		font-size : 20px;
 		text-align : center;
@@ -13,4 +22,42 @@
 	}
 }
 
+.outer-input {
+	margin : 32px 0;
+	width : 100%;
+	.title-input {
+		font-weight : 100;
+		font-size : 18px;
+		padding : 0 8px;
+	}
+	.inputContainer {
+		margin : 8px;
+	}
+	.inputContainer input {
+		font-size : 14px;
+		width : 100%;
+		padding: 10px 8px;
+		border: none;
+		border-bottom: solid 1px #000;
+		transition: border 0.3s;
+	}
+	.inputContainer input:focus {
+		outline : none;
+		border-bottom: solid 1px #ff6e21;
+	}
+	.inputContainer textarea {
+		font-size : 14px;
+		resize : none;
+		height : 100px;
+		width : 100%;
+		padding : 10px 8px;
+		border : none;
+		border : solid 1px #000;
+		transition : border 0.3s;
+	}
+	.inputContainer textarea:focus {
+		outline : none;
+		border : solid 1px #ff6e21;
+	}
+}
 
