added keyboard control to cities dropdown

--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -84,4 +84,8 @@
 	.cityDropdownList li:hover {
 		background : #efefef;
 	}
+	.cityDropdownList li:focus{
+		background : #efefef;
+		outline : none;
+	}
 }
