--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -89,3 +89,15 @@
 		outline : none;
 	}
 }
+
+.radio-outer {
+	font-weight : 100;
+	.radio-container {
+		display : inline-block;
+		padding : 22px 8px 0 8px;
+		.radio-label {
+			display : inline-block;
+			margin-left : 8px;
+		}
+	}
+}
