--- a/index.ejs
+++ b/index.ejs
@@ -25,6 +25,9 @@
 	</head>
 	<body>
 		<div id="container"><%- markup -%></div>
+		<script>
+			window.__PRELOADED_STATE__ = JSON.parse('<%-JSON.stringify(preloadedState)%>');
+        </script>
 		<script src="bundle.js" type="text/javascript"></script>
 	</body>
 </html>
