--- a/index.ejs
+++ b/index.ejs
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<div id="container"><%- markup -%></div>
-		<script>
+		<script id='preload-script-rl'>
 			window.__PRELOADED_STATE__ = JSON.parse('<%-JSON.stringify(preloadedState)%>');
         </script>
 		<script src="bundle.js" type="text/javascript"></script>
