added viewport and media query to cols

--- a/index.ejs
+++ b/index.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Listing the showreels of artists and studios from around the world">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="RenderList - Best showreels from around the world">
 		<meta property="og:url" content="http://www.renderlist.com/">
 		<meta property="og:description" content="Listing the showreels of artists and studios from around the world">
