--- a/index.ejs
+++ b/index.ejs
@@ -13,7 +13,7 @@
 		<title>RenderList - Best showreels from around the world</title>
 		<link rel="stylesheet" type="text/css"  href="base.css"/>
 		<link rel="stylesheet" href="bundle.css">
-		<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="assets/logo-32.png"/>
 		<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)
