--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -1,49 +1,35 @@
-.container {
-	color : #545454;
-	width : 100%;
-	background : #fff;
-	height : 100px;
-	border-bottom : 1px solid #f5f5f5;
-	.innerBox {
-		margin : auto;
-		width : 80%;
-		border-bottom : 1px solid #f5f5f5;
-		.logo {
-			width : auto;
-			float : left;
-			line-height : 50px;
-			font-size : 18px;
-			font-weight : 400;
-		}
-		.navbar {
-			font-size : 14px;
-			font-weight : 100;
-			width : auto;
-			float : right;
-			line-height : 50px;
-			.navList li {
-				cursor : pointer;
-				padding-left : 16px;
-			
+@import 'variables.css';
+
+.main {
+	.outer {
+		background : var(--color-black);
+		color : var(--color-white);
+		height : 42px;
+		.inner {
+			max-width : 1024px;
+			margin : auto;
+			.logo-container {
+				line-height : 42px;
+				font-size : 16px;
 			}
-			.userName {
-				position : relative;
-				font-weight : 400;
+			.logo-img {
+				float : left;
+				width : 24px;
+				margin : 8px 8px 0 16px;
 			}
-			.profilePhoto {
-				border-radius : 50%;
-				max-width : 16px;
-				margin-bottom : -3px;
-				margin-right : 4px;	
+			@media only screen and (max-width: 767px) {
+				.logo-container {
+					text-align : center;
+				}
+				.logo-img {
+					float : none;
+					margin : 0 8px -6px 0;
+				}
 			}
 		}
 	}
 	.subtitle {
-		line-height : 50px;
-		font-size : 24px;
-		font-weight : 100;
-		color : #737373;
-		text-align : center;
+		height : 60px;
+		background : var(--color-grey-1);
 	}
 }
-
