--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -33,7 +33,7 @@
 			.logo-img {
 				float : left;
 				width : 24px;
-				margin : 8px 8px 0 16px;
+				margin : 8px 8px 0 42px;
 			}
 			@media only screen and (max-width: 767px) {
 				.links-dynamic {
@@ -48,7 +48,7 @@
 				}
 				.logo-img {
 					float : none;
-					margin : 0 8px -6px 0;
+					margin : 0 8px -6px 36px;
 				}
 			}
 		}
@@ -56,6 +56,12 @@
 	.subtitle {
 		height : 72px;
 		background : var(--color-grey-1);
+	}
+	.subtitle-text {
+		text-align : center;
+		color : var(--color-white);
+		font-size : 16px;
+		line-height : 72px;
 	}
 	@media only screen and (max-width: 767px) {
 		.subtitle {
