--- a/components/LoginContainer/loginContainer.css
+++ b/components/LoginContainer/loginContainer.css
@@ -1,22 +1,28 @@
-.outer {
-	position : absolute;
-	background : #fff;
-	border : 1px solid #f5f5f5;
-	border-radius : 8px;
-	padding : 8px 16px 16px 16px;
-	right : 40%;
-	top : 150px;
-	width : 200px;
-	.title {
-		font-size : 14px;
-		text-align : center;
-		font-weight : 400;
-		line-height : 36px;	
-		border-bottom : 1px solid #efefef;
-		margin-bottom : 8px;
-	}
-	.close {
-		max-width : 72px;
-		margin : 16px auto 0 auto;
+@import 'variables.css';
+
+.main {
+	overflow : scroll;
+	background-color : rgba(0, 0, 0, 0.95);
+	position : fixed;
+	height : 100%;
+	width : 100%;
+	top : 0;
+	text-align : center;
+	color : var(--color-white);
+	.container {
+		max-width : 300px;
+		margin : 0 auto;
+		position : relative;
+		top : 25%;
+		.title {
+			padding : 24px;
+			font-size : 24px;
+		}
+		.message {
+			display : inline-block;
+			cursor : pointer;
+			padding : 24px;
+			font-size : 10px;
+		}
 	}
 }
