--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -10,6 +10,12 @@
 		height : 42px;
 		.inner {
 			margin : auto;
+			.hamburger {
+				width : 0;
+				visibility : hidden;
+				margin : 0;
+				cursor : pointer;
+			}
 			.logo-container {
 				line-height : 42px;
 				font-size : 16px;
@@ -35,6 +41,12 @@
 				margin : 8px 8px 0 42px;
 			}
 			@media only screen and (max-width: 767px) {
+				.hamburger {
+					visibility : visible;
+					width : 24px;
+					margin : 8px 0 0 12px;
+					float : left;
+				}
 				.links-dynamic {
 					background : var(--color-grey-2);
 				}
@@ -47,7 +59,8 @@
 				}
 				.logo-img {
 					float : none;
-					margin : 0 8px -6px 36px;
+					margin : 0 8px -4px 12px;
+					width : 20px;
 				}
 			}
 		}
