fixed zindex of login container

--- a/components/LoginContainer/loginContainer.css
+++ b/components/LoginContainer/loginContainer.css
@@ -1,6 +1,7 @@
 @import 'variables.css';
 
 .main {
+	z-index : 10;
 	overflow : scroll;
 	background-color : rgba(0, 0, 0, 0.95);
 	position : fixed;
