--- a/components/FeaturedShowreelsGrid/featuredShowreelsGrid.css
+++ b/components/FeaturedShowreelsGrid/featuredShowreelsGrid.css
@@ -28,3 +28,12 @@
 		}
 	}	
 }
+
+@media only screen and (max-width: 710px) {
+	.main {
+		height : 200px;
+		.inner {
+			padding : 75px 0;
+		}
+	}
+}
