--- a/components/ShowreelGridUnit/showreelGridUnit.css
+++ b/components/ShowreelGridUnit/showreelGridUnit.css
@@ -16,6 +16,31 @@
 				height : 100%;
 				width : 100%;
 			}
+			.play-button-container {
+				height : 100%;
+				width : 100%;
+				position : absolute;
+				left : 0;
+				top : 0;
+				opacity : 0;
+				cursor : pointer;
+				transition : opacity 0.5s;
+			}
+			.play-button-container:hover {
+				opacity : 1;
+			}
+			.play-button {
+				position : absolute;
+				top : 50%;
+				left : 50%;
+				cursor : pointer;
+			}
+			.play-button img {
+				display : block;
+				box-shadow : 0 4px 8px 0 rgb(0, 0, 0), 0 6px 20px 0 rgb(0, 0, 0);
+				border-radius : 50%;
+				margin : -24px 0 0 -24px;
+			}
 			.overlay-container {
 				font-size : 12px;
 				color : var(--color-white);
