--- a/public/base.css
+++ b/public/base.css
@@ -1,3 +1,5 @@
+@import 'variables.css';
+
 body {
 	text-rendering : geometricPrecision;
 	margin : 0;
@@ -5,7 +7,6 @@ body {
 	width : 100%;
 	height : 100%;
 	font-family : sans-serif;
-	background : #fff;
 }
 
 li {
