--- a/components/Contact/contact.css
+++ b/components/Contact/contact.css
@@ -1,8 +1,13 @@
+@import 'variables.css';
+
 .outer {
-	width : 40%;
-	margin : 32px auto;
-	padding : 16px;
-	border : 4px solid;
+	max-width : 768px;
+	.heading {
+		line-height : 32px;
+		border-bottom : 1px solid var(--color-grey-2);
+		font-weight : 600;
+		color : var(--color-black); 
+	}
 	 .error {
 		font-weight : 100;
 		font-size : 14px;
@@ -23,22 +28,20 @@
 }
 
 .outer-input {
-	margin : 32px 0;
 	width : 100%;
 	.title-input {
-		font-weight : 100;
-		font-size : 18px;
+		font-size : 16px;
 		padding : 0 8px;
 	}
 	.inputContainer {
-		margin : 8px;
 	}
 	.inputContainer input {
 		font-size : 14px;
 		width : 100%;
 		padding: 10px 8px;
 		border: none;
-		border-bottom: solid 1px #000;
+		background : var(--color-grey-2);
+		border-radius : 4px;
 		transition: border 0.3s;
 	}
 	.inputContainer input:focus {
@@ -52,7 +55,8 @@
 		width : 100%;
 		padding : 10px 8px;
 		border : none;
-		border : solid 1px #000;
+		background : var(--color-grey-2);
+		border-radius : 4px;
 		transition : border 0.3s;
 	}
 	.inputContainer textarea:focus {
