--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -40,6 +40,18 @@
 				width : 24px;
 				margin : 8px 8px 0 42px;
 			}
+			.search-input {
+				background-image: url('/assets/search-icon.svg');
+				background-color: #000000;
+				background-repeat: no-repeat;
+				height: 28px;
+				background-size: 18px;
+				background-position: 4px 50%;
+				padding: 0 26px;
+				color: white;
+				border-radius: 4px;
+				border: 1px solid #696969;
+			}
 			@media only screen and (max-width: 767px) {
 				.hamburger {
 					visibility : visible;
