--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -27,6 +27,12 @@
 				cursor : pointer;
 				padding-left : 16px;
 			}
+			.links-static img {
+				width: 20px;
+				float: left;
+				border-radius: 50%;
+				margin: 10px 8px 0 0;
+			}
 			.links-dynamic {
 				font-size : 12px;
 				line-height : 42px;
