--- a/components/ProfilePage/profilePage.css
+++ b/components/ProfilePage/profilePage.css
@@ -100,6 +100,7 @@
 
 			}
 			.data ul li {
+				cursor : pointer;
 				border : 1px solid var(--color-grey-1);
 				border-radius : 2px;
 				padding : 4px;
