--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -1,3 +1,5 @@
+@import 'variables.css';
+
 .outer {
 	width : 40%;
 	margin : 32px auto;
@@ -101,3 +103,33 @@
 		}
 	}
 }
+
+.part-1-outer {
+	text-align : center;
+	.part-1-inner {
+		margin : 72px auto;
+		max-width : 500px;
+		.part-1-title {
+			color : var(--color-grey-2);
+			font-size : 32px;
+		}
+		.part-1-title span {
+			display : block;
+			margin : 8px auto;
+			font-size : 14px;
+		}
+		.part-1-form {
+		}
+		.part-1-input {
+			padding: 24px;
+			border: 1px solid var(--color-grey-2);
+			margin: 24px auto;
+		}
+		.part-1-button {
+			width : 100px;
+			font-size : 14px;
+			margin : auto;
+		}
+	}
+}
+
