--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -130,6 +130,25 @@
 			font-size : 14px;
 			margin : auto;
 		}
+		.loader-outer span {
+			background : url('/assets/loader.gif') repeat-x left;
+			height : 20px;
+			display : block;
+			max-width : 230px;
+			margin : 24px auto;
+			border-radius : 4px;
+		}
+		.loader-outer {
+			font-size : 14px;
+			color : var(--color-grey-2);
+			.filename {
+				font-size : 12px;
+				padding: 24px;
+				border: 1px solid var(--color-grey-2);
+				margin: 24px auto 0 auto;
+				max-width : 230px;
+			}
+		}
 	}
 }
 
