added jobs and changed basic design

--- a/components/ButtonPrimary/buttonPrimary.css
+++ b/components/ButtonPrimary/buttonPrimary.css
@@ -6,5 +6,9 @@
 	border-radius : 2px;
 	text-align : center;
 	background : var(--color-primary);
-	color : var(--color-white);
+	color : var(--color-text-smoke);
+}
+
+.outer:hover {
+	background : var(--color-primary-hover);
 }
