--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -6,8 +6,8 @@
 	}
 	.outer {
 		background : var(--color-black);
-		color : var(--color-white);
-		height : 42px;
+		color : var(--color-text-smoke);
+		height : 60px;
 		.inner {
 			margin : auto;
 			.hamburger {
@@ -17,7 +17,7 @@
 				cursor : pointer;
 			}
 			.logo-container {
-				line-height : 42px;
+				line-height : 60px;
 				font-size : 16px;
 			}
 			.links-static {
@@ -31,32 +31,42 @@
 				width: 20px;
 				float: left;
 				border-radius: 50%;
-				margin: 10px 8px 0 0;
+				margin: 20px 8px 0 0;
+			}
+			.links-static:hover {
+				color : var(--color-text-mute);
 			}
 			.links-dynamic {
 				font-size : 12px;
-				line-height : 42px;
+				line-height : 60px;
 			}
 			.links-dynamic ul li {
 				padding-right : 16px;
 				cursor : pointer;
 			}
+			.links-dynamic ul li:hover {
+				color : var(--color-text-mute);
+			}
 			.logo-img {
 				float : left;
 				width : 24px;
-				margin : 8px 8px 0 42px;
+				margin : 16px 8px 0 42px;
 			}
 			.search-input {
 				background-image: url('/assets/search-icon.svg');
-				background-color: #000000;
+				background-color: var(--color-background);
 				background-repeat: no-repeat;
-				height: 28px;
-				background-size: 18px;
-				background-position: 4px 50%;
+				height: 24px;
+				background-size: 14px;
+				background-position: 6px 50%;
 				padding: 0 26px;
-				color: white;
+				color: var(--color-text-mute);
 				border-radius: 4px;
-				border: 1px solid #696969;
+				border : none;
+				line-height : 24px;
+			}
+			.search-input:focus {
+				outline : none;
 			}
 			@media only screen and (max-width: 767px) {
 				.hamburger {
@@ -66,7 +76,7 @@
 					float : left;
 				}
 				.links-dynamic {
-					background : var(--color-grey-2);
+					background : var(--color-grade-1);
 				}
 				.links-dynamic ul li {
 					width : 100%;
