--- a/public/base.css
+++ b/public/base.css
@@ -1,5 +1,3 @@
-@import 'variables.css';
-
 html {
 	height : 100%;
 }
@@ -11,7 +9,7 @@ body {
 	width : 100%;
 	height : 100%;
 	font-family : sans-serif;
-	background : #f4f4f4;
+	background : #222;
 }
 
 li {
