--- a/components/About/about.css
+++ b/components/About/about.css
@@ -1,22 +1,21 @@
+@import 'variables.css';
+
 .outer {
-	text-align : center;
-	font-weight : 100; 
-	.title {
-		font-size : 32px;
-		line-height : 32px;
-		padding : 32px;
+	max-width : 1024px;
+	margin : 24px auto;
+	line-height : 24px;
+	font-size : 16px;
+	color : var(--color-text-basic);
+	width : 95%;
+	.content {
+		margin : 0 0 24px 0;
+		max-width : 700px;		
 	}
-	.subtitle {		
-		font-size: 20px;
-		line-height: 28px;
-		width: 50%;
-		margin: auto;
+	.social {
+		margin : 0 0 24px 0;		
 	}
-	p {
-		margin-top : 16px;
+	a {
+		font-weight : 600;
 	}
 }
 
-.outer a {
-	display : inline-block;
-}
