--- a/components/JobsPage/jobsPage.css
+++ b/components/JobsPage/jobsPage.css
@@ -3,7 +3,7 @@
 .job-container {
     display : block;
     width : 95%;
-	max-width : 900px;
+	max-width : 1024px;
     margin : 24px auto;
     border : 1px solid var(--color-border-smoke);
     padding : 16px;
@@ -13,11 +13,13 @@
 		font-size : 20px;
 	}
 	.location {
+		color : var(--color-text-mute);
 		font-size : 14px;
 		float : right;
 		line-height : 38px;
 	}
 	.company {
+		color : var(--color-text-mute);
 		font-size : 14px;
 	}
 }
