--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -130,9 +130,9 @@
 	text-align : center;
 	.part-1-inner {
 		margin : 72px auto;
-		max-width : 500px;
+		max-width : 700px;
 		.part-1-title {
-			color : var(--color-grey-2);
+			color : var(--color-text-basic);
 			font-size : 32px;
 		}
 		.part-1-title span {
@@ -144,8 +144,11 @@
 		}
 		.part-1-input {
 			padding: 24px;
-			border: 1px solid var(--color-grey-2);
+			border: 1px solid var(--color-border-dark);
 			margin: 24px auto;
+		}
+		.part-1-input:focus {
+			outline : none;
 		}
 		.part-1-button {
 			width : 100px;
@@ -162,11 +165,11 @@
 		}
 		.loader-outer {
 			font-size : 14px;
-			color : var(--color-grey-2);
+			color : var(--color-text-basic);
 			.filename {
 				font-size : 12px;
 				padding: 24px;
-				border: 1px solid var(--color-grey-2);
+				border: 1px solid var(--color-border-dark);
 				margin: 24px auto 0 auto;
 				max-width : 230px;
 			}
