--- a/components/AddStudio/addStudio.css
+++ b/components/AddStudio/addStudio.css
@@ -1,39 +1,40 @@
 @import 'variables.css';
 
 .outer {
-	width : 40%;
-	margin : 32px auto;
-	padding : 16px;
-	border : 4px solid;
+	width : 95%;
+	margin : 24px auto;
+	max-width : 1024px;
 	 .error {
-		font-weight : 100;
+		font-weight : 600;
 		font-size : 14px;
 		color : red;
-		background : #efefef;
+		background : var(--color-border-smoke);
 		border-radius : 4px;
 		padding : 8px;
-		margin : 32px 0;
+		margin : 24px 0;
+		max-width : 700px;
 	 }
 	.title {
-		font-size : 20px;
-		text-align : center;
+		font-size : 32px;
+		font-weight : 600;
 		line-height : 32px;
 	}
 	.button {
-		width : 150px; 
+		width : 96px; 
+		font-size : 12px;	
 	}
 }
 
 .outer-input {
-	margin : 32px 0;
-	width : 100%;
+	margin : 24px 0;
+	max-width : 700px;
 	.title-input {
-		font-weight : 100;
-		font-size : 18px;
-		padding : 0 8px;
+		font-weight : 600;
+		font-size : 14px;
+		margin : 0 0 8px 0;
 	}
 	.tags-container {
-		border: 1px solid;
+		background : var(--color-border-smoke);
 		padding: 8px 0 4px 4px;
 		border-radius: 4px;
 	}
@@ -55,33 +56,30 @@
 		cursor : pointer;
 	}
 	.inputContainer {
-		margin : 8px;
 	}
 	.inputContainer input {
+		background : var(--color-border-smoke);
 		font-size : 14px;
 		width : 100%;
 		padding: 10px 8px;
 		border: none;
-		border-bottom: solid 1px #000;
-		transition: border 0.3s;
+		border-radius : 4px;
 	}
-	.inputcontainer input:focus {
+	.inputContainer input:focus {
 		outline : none;
-		border-bottom: solid 1px #ff6e21;
 	}
 	.inputContainer textarea {
+		background : var(--color-border-smoke);
 		font-size : 14px;
 		resize : none;
 		height : 100px;
 		width : 100%;
 		padding : 10px 8px;
 		border : none;
-		border : solid 1px #000;
-		transition : border 0.3s;
+		border-radius : 4px;
 	}
 	.inputContainer textarea:focus {
 		outline : none;
-		border : solid 1px #ff6e21;
 	}
 }
 
@@ -91,12 +89,9 @@
 
 .cityDropdown {
 	position : absolute;
-	background : white;
-	font-weight : 100;
+	background : var(--color-smoke);
 	width : 100%;
-	border-right : 1px solid #dcdcdc;	
-	border-left : 1px solid #dcdcdc;	
-	border-bottom : 1px solid #dcdcdc;	
+	font-size : 14px;
 	.cityDropdown ul {
 
 	}
@@ -115,10 +110,11 @@
 }
 
 .radio-outer {
-	font-weight : 100;
+	font-weight : 600;
+	font-size : 14px;
 	.radio-container {
 		display : inline-block;
-		padding : 22px 8px 0 8px;
+		margin : 0 16px 0 0;
 		.radio-label {
 			display : inline-block;
 			margin-left : 8px;
@@ -146,6 +142,7 @@
 			padding: 24px;
 			border: 1px solid var(--color-border-dark);
 			margin: 24px auto;
+			cursor : pointer;
 		}
 		.part-1-input:focus {
 			outline : none;
