added loader overlay

--- a/variables.css
+++ b/variables.css
@@ -14,4 +14,5 @@
 	--color-border-smoke : #eaeaea;
 	--color-border-dark : #999;
 	--color-grade-1 : #222;
+	--color-loader-overlay : rgba(245, 245, 245, 0.50);
 }
