--- a/public/base.css
+++ b/public/base.css
@@ -77,6 +77,22 @@ p {
     display:block;
 }
 
+.data-container {
+	position : relative;
+}
+
+.loading {
+	position : absolute;
+	top : 0;
+	left : 0;
+	height : 100%;
+	width : 100%;
+	background : rgba(245, 245, 245, 0.50);
+	text-align : center;
+	line-height : 72px;
+	z-index : 9;
+}
+
 /* Responsive grid design*/
 
 * {
