--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -31,7 +31,7 @@
 				width: 20px;
 				float: left;
 				border-radius: 50%;
-				margin: 20px 8px 0 0;
+				margin: 20px 8px -20px 0;
 			}
 			.links-static:hover {
 				color : var(--color-text-mute);
