--- a/index.ejs
+++ b/index.ejs
@@ -2,15 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Listing the showreels of artists and studios from around the world">
+		<meta name="description" content="Finest showreels from around the world">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="RenderList - Best showreels from around the world">
+		<meta property="og:title" content="RenderList - Finest showreels from around the world">
 		<meta property="og:url" content="http://www.renderlist.com/">
-		<meta property="og:description" content="Listing the showreels of artists and studios from around the world">
-		<meta property="og:image" content="http://www.renderlist.com/assets/tab.png"/>
+		<meta property="og:description" content="Finest showreels from around the world">
 		<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
 		<meta name="google-site-verification" content="NWhM542dK0yxIDd30FLQwhl_2_9JACBGfFbdTa-5vfU" />
-		<title>RenderList - Best showreels from around the world</title>
+		<title>RenderList - Finest showreels from around the world</title>
 		<link rel="stylesheet" type="text/css"  href="base.css"/>
 		<link rel="stylesheet" href="bundle.css">
 		<link rel="shortcut icon" type="image/png" href="assets/logo-32.png"/>
