--- a/index.ejs
+++ b/index.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8"/>
 		<meta name="description" content="Finest showreels from around the world">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="RenderList - Finest showreels from around the world">
-		<meta property="og:url" content="http://www.renderlist.com/">
+		<meta property="og:url" content="https://www.renderlist.com">
 		<meta property="og:description" content="Finest showreels from around the world">
+		<meta property="og:image" content="https://www.renderlist.com/assets/fb-preview.png">
 		<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
 		<meta name="google-site-verification" content="NWhM542dK0yxIDd30FLQwhl_2_9JACBGfFbdTa-5vfU" />
 		<title>RenderList - Finest showreels from around the world</title>
