--- a/index.ejs
+++ b/index.ejs
@@ -8,6 +8,7 @@
 		<meta property="og:url" content="https://www.renderlist.com">
 		<meta property="og:description" content="Finest showreels from around the world">
 		<meta property="og:image" content="https://www.renderlist.com/assets/fb-preview.png">
+		<meta property="fb:app_id" content="373030956419279">
 		<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
 		<meta name="google-site-verification" content="NWhM542dK0yxIDd30FLQwhl_2_9JACBGfFbdTa-5vfU" />
 		<title>RenderList - Finest showreels from around the world</title>
