--- a/index.ejs
+++ b/index.ejs
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="description" content="Finest showreels from around the world">
+		<meta name="description" content="Discover top creative work and hire the best artists. Got a showreel ?">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="RenderList - Finest showreels from around the world">
 		<meta property="og:url" content="https://www.renderlist.com">
-		<meta property="og:description" content="Finest showreels from around the world">
+		<meta property="og:description" content="Discover top creative work and hire the best artists. Got a showreel ?">
 		<meta property="og:image" content="https://www.renderlist.com/assets/fb-preview.png">
 		<meta property="fb:app_id" content="373030956419279">
 		<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
