--- a/index.ejs
+++ b/index.ejs
@@ -4,14 +4,14 @@
 		<meta charset="utf-8"/>
 		<meta name="description" content="Discover top creative work and hire the best artists. Got a showreel ?">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="RenderList - Finest showreels from around the world">
+		<meta property="og:title" content="RenderList - Finest showreels from around the globe">
 		<meta property="og:url" content="https://www.renderlist.com">
 		<meta property="og:description" content="Discover top creative work and hire the best artists. Got a showreel ?">
 		<meta property="og:image" content="https://www.renderlist.com/assets/fb-preview.png">
 		<meta property="fb:app_id" content="373030956419279">
 		<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
 		<meta name="google-site-verification" content="NWhM542dK0yxIDd30FLQwhl_2_9JACBGfFbdTa-5vfU" />
-		<title>RenderList - Finest showreels from around the world</title>
+		<title>RenderList - Finest showreels from around the globe</title>
 		<link rel="stylesheet" type="text/css"  href="base.css"/>
 		<link rel="stylesheet" href="bundle.css">
 		<link rel="shortcut icon" type="image/png" href="assets/logo-32.png"/>
