--- a/index.ejs
+++ b/index.ejs
@@ -28,7 +28,8 @@
 	<body>
 		<div id="container"><%- markup -%></div>
 		<script id='preload-script-rl'>
-			window.__PRELOADED_STATE__ = JSON.parse('<%-JSON.stringify(preloadedState)%>');
+			var data = JSON.stringify(preloadedState);
+			window.__PRELOADED_STATE__ = JSON.parse(data);
         </script>
 		<script src="bundle.js" type="text/javascript"></script>
 	</body>
